<resources>
    <string name="app_name">MoviesApp</string>
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="year">year</string>
    <string name="director">director</string>
    <string name="rating">rating</string>
    <string name="save">SAVE</string>
    <string name="watched">watched</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="register_screen">REGISTER SCREEN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>