<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_title_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:hint="@string/director"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            android:layout_marginEnd="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/director_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false">



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/watched"
            android:layout_marginEnd="10dp"
            app:startIconDrawable="@drawable/ic_baseline_remove_red_eye_24">
            <AutoCompleteTextView
                android:id="@+id/watched_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rating"
            app:startIconDrawable="@drawable/ic_baseline_star_rate_24"
            >
        <AutoCompleteTextView
            android:id="@+id/rating_complete_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="@string/save"
            android:background="@drawable/rounded_button"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            />
    </LinearLayout>


</LinearLayout>